refactor: extract responsibilities from FingerprintEngine and improve concurrency
- Extracted hostname resolution and service scanning to ActiveProber.
- Extracted database persistence and merging logic to DeviceIdentityManager.
- Extracted liveness state transitions to DeviceLivenessManager.
- Replaced manual Virtual Thread spanning and Semaphores with a fixed-size ThreadPoolExecutor (max 20 threads) and bounded queue.
- Implemented ScheduledExecutorService to enforce a 60-second hard timeout per sighting task to prevent thread starvation.